--- a/templates/category/_form.html.twig
+++ b/templates/category/_form.html.twig
@@ -1,4 +1,5 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
+    {{ form_row(form.media, {'attr' : {'value':'http://placehold.it/'}} ) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
