--- a/templates/product/_form.html.twig
+++ b/templates/product/_form.html.twig
@@ -1,4 +1,7 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
+    {# {{ form_start(form)}} #}
+        {{ form_row(form.media, {'attr' : {'placeholder':'http://placehold.it/'}}) }}
+    {# {{ form_end(form) }} #}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
