--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -60,7 +60,7 @@
             </a>
             <button type="submit" class="btn btn-success float-right">
                 <i class="fas fa-shopping-cart mr-1"></i>
-                Enregistrer les modifications
+                Mettre à jour le panier
             </button>
         </form>
 
