--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -3,28 +3,31 @@
 {% block title %}Category{% endblock %}
 
 {% block body %}
-    <h1>Category</h1>
+    <div class="bg-light p-3">
+        <h1>Les produits de la catégories {{ category.name }}</h1>
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ category.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ category.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ category.description }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('category_index') }}">back to list</a>
-
-    <a href="{{ path('category_edit', {'id': category.id}) }}">edit</a>
-
-    {{ include('category/_delete_form.html.twig') }}
+    <div class="row">
+        {% for product in category.products %}
+            <div class="col-4 mt-4">
+                <div class="border border-dark rounded p-2 clearfix">
+                    <h2>
+                        {{ product.name }}
+                        -
+                        {{ product.price }}
+                        €
+                    </h2>
+                    {% for media in product.media  %}
+                        <img class="img-fluid rounded" src="{{ media.url }}" alt="{{ media.alt }}">
+                    {% endfor %}
+                    <hr>
+                    <a href="{{path( 'cart_add', {'id': product.id} )}}" class="btn btn-success float-right">
+                        <i class="fas fa-shopping-cart mr-1"></i>
+                        Ajouter
+                    </a>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    
 {% endblock %}
