--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,13 +6,21 @@
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.name) }}
         {{ form_row(registrationForm.firstName) }}
+        {{ form_row(registrationForm.name) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.phone) }}
+        {{ form_row(registrationForm.address) }}
+        {{ form_row(registrationForm.postalCode) }}
+        {{ form_row(registrationForm.city) }}
+        {{ form_row(registrationForm.country) }}
         {{ form_row(registrationForm.plainPassword) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
+        {% if editMode %}
+        <button class="btn">Mettre à jour</button>
+        {% else %}
         <button class="btn">Register</button>
+        {% endif %}
     {{ form_end(registrationForm) }}
 {% endblock %}
