order save and command line but issues : only one product from cart is saved and command array doesn't appear in order?

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -54,7 +54,7 @@
                 </tfoot>
             </table>
             <hr>
-            <a href="#" class="btn btn-success float-right">
+            <a href="{{ path('save_order') }}" class="btn btn-success float-right">
                 <i class="fas fa-shopping-cart mr-1"></i>
                 Commander
             </a>
