--- a/templates/orders/show.html.twig
+++ b/templates/orders/show.html.twig
@@ -4,31 +4,25 @@
 
 {% block body %}
     <div class="bg-light p-3">
-        <h1>Vos commandes</h1>
+        <h1>Commande n°{{ order.orderNumber }}</h1>
     </div>
+    {{dump(order.commandLines)}}
+    <div class="row">   
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Produit</th>
+                    <th>Quantité</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto voluptates quidem nihil soluta praesentium, obcaecati quam odio reprehenderit necessitatibus doloribus sunt reiciendis totam non modi, accusantium quibusdam, dolores enim eligendi?</td>
+                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit non, eum tempora facilis est sequi sapiente odio quisquam vero quidem provident neque ipsum, eius laborum amet! Aut facere magni nihil!
+                    <5></5></td>
+                </tr>
+            </tbody>
+        </table>
 
-    <div class="row">
-        {% for order in orders %}
-        {{dump(order.commandLines)}}
-            {# {% if order.user.id == app.user.id %}
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>N° commande</th>
-                        <th>Date</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Commande n°{{ order.orderNumber }}</td>
-                        <td>Effectuée le {{ order.orderedAt | date('d/m/Y à H:i') }}</td>
-                    </tr>
-                </tbody>
-            </table>
-            {% elseif not app.user.orders %}
-                <p>Vous n'avez effectué aucune commande.</p>
-            {% endif %} #}
-            
-        {% endfor %} 
     </div>
 {% endblock %}
