--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,12 +7,12 @@
             {% endblock %}
         </title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
+            <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous"/>
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand" href="/">UrbexShop</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,15 @@
                         </a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="{{ path('category_index') }}">Catégories
+                        <a class="nav-link" href="{{path('category_show', {id:'12'})}}">Masques
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{path('category_show', {id:'13'})}}">Lampes
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{path('category_show', {id:'14'})}}">Vêtements
                         </a>
                     </li>
                 </ul>
