--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -18,9 +18,7 @@
                         {{ product.price }}
                         €
                     </h2>
-                    {% for media in product.media  %}
-                        <img class="img-fluid rounded" src="{{ media.url }}" alt="{{ media.alt }}">
-                    {% endfor %}
+                        <img class="img-fluid rounded" src="{{ product.media }}" alt="{{ product.mediaAlt }}">  
                     <hr>
                     <a href="{{path( 'cart_add', {'id': product.id} )}}" class="btn btn-success float-right">
                         <i class="fas fa-shopping-cart mr-1"></i>
