--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -3,36 +3,21 @@
 {% block title %}Product{% endblock %}
 
 {% block body %}
-    <h1>Product</h1>
+    <div class="row">
+        <div class="col-4">
+            <img src="{{ product.media }}" alt="{{ product.mediaAlt }}" style="width: 100%;">
+        </div>
+        <div class="col text-center">
+            <h1>{{ product.name }}</h1>
+            <p>{{product.description}}</p>
+            <p>Prix : {{ product.price }}0 €</p>
+            <a href="{{path( 'cart_add', {'id': product.id} )}}" class="btn btn-success align-center">
+                <i class="fas fa-shopping-cart mr-1"></i>
+                Ajouter
+            </a>
+        </div>
+        
+        
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ product.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ product.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ product.description }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ product.price }}</td>
-            </tr>
-            <tr>
-                <th>Available</th>
-                <td>{{ product.available ? 'Yes' : 'No' }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('product_index') }}">back to list</a>
-
-    <a href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
-
-    {{ include('product/_delete_form.html.twig') }}
 {% endblock %}
