back end produit/categorie admin + /register/master pour creer compte admin

--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,6 +1,6 @@
 <!-- Footer -->
 </div>
-<footer class="footer container-fluid h-100">
+<footer class="footer container-fluid mt-4">
 
     <!-- Copyright -->
     <div class="text-center py-3 my-auto">© 2020 Copyright - 
