--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,14 @@
 /* general */
 
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+.body {
+    min-height: 81%;
+}
+
 .unstyled-link:hover {
     text-decoration: none;
 }
@@ -19,7 +28,7 @@ p {
 footer {
     background: black;
     color: white;
-    margin-top: 100px;
+    /* margin-top: -53px; */
 }
 
 footer a {
