--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,19 +23,11 @@
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('category_index') }}">Catégories
+                        <a class="nav-link" href="{{ path('product_index') }}">Nos produits
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{path('category_show', {id:'12'})}}">Masques
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{path('category_show', {id:'13'})}}">Lampes
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{path('category_show', {id:'14'})}}">Vêtements
+                        <a class="nav-link" href="{{ path('category_index') }}">Nos catégories
                         </a>
                     </li>
                 </ul>
@@ -64,7 +56,7 @@
             </div>
         </nav>
 
-        <div class="container pt-5"> {% block body %}{% endblock %}
+        <div class="container pt-5 body"> {% block body %}{% endblock %}
             </div>
             <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
