--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -1,13 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Category{% endblock %}
+{% block title %}Modifier {{category.name}}{% endblock %}
 
 {% block body %}
-    <h1>Edit Category</h1>
 
-    {{ include('category/_form.html.twig', {'button_label': 'Update'}) }}
+    <h1>Modifier {{category.name}}</h1>
 
-    <a href="{{ path('category_index') }}">back to list</a>
+    {{ include('category/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    {{ include('category/_delete_form.html.twig') }}
 {% endblock %}
