--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,6 +49,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ path('orders')}}">
+                                Mes commandes
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
                         </li>
                     {% endif %}
