--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -7,29 +7,34 @@
     <div class="bg-light p-3">
         <h1 class="text-center">Les produits</h1>
     </div>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('product_new') }}" class="btn btn-success mt-2"><i class="fas fa-plus-circle mr-1"></i>Créer un produit</a>
+    {% endif %}
 
     <div class="row">
         {% for product in products %}
-            <div class="col-4 mt-4">
-                <a href="{{path('product_show', {'id':product.id})}}" class="unstyled-link">
-                    <div class="border border-dark rounded p-2 clearfix text-center">
-                        <h2>
-                            {{ product.name }}
-                        </h2>
-                        <hr>
-                        <p>
-                            {{ product.price }}0 €
-                        </p>
-                        <hr>
-                            <img class="img-fluid rounded" src="{{ product.media }}" alt="{{ product.mediaAlt }}">  
-                        <hr>
-                        <a href="{{path( 'cart_add', {'id': product.id} )}}" class="btn btn-success float-right">
-                            <i class="fas fa-shopping-cart mr-1"></i>
-                            Ajouter
-                        </a>
-                    </div>
-                </a>
-            </div>
+            {% if product.available or is_granted('ROLE_ADMIN') %}
+                <div class="col-4 mt-4">
+                    <a href="{{path('product_show', {'id':product.id})}}" class="unstyled-link">
+                        <div class="border border-dark rounded p-2 clearfix text-center">
+                            <h2>
+                                {{ product.name }}
+                            </h2>
+                            <hr>
+                            <p>
+                                {{ product.price }}0 €
+                            </p>
+                            <hr>
+                                <img class="img-fluid rounded" src="{{ product.media }}" alt="{{ product.mediaAlt }}">  
+                            <hr>
+                            <a href="{{path( 'cart_add', {'id': product.id} )}}" class="btn btn-success float-right">
+                                <i class="fas fa-shopping-cart mr-1"></i>
+                                Ajouter
+                            </a>
+                        </div>
+                    </a>
+                </div>
+            {% endif %}
         {% endfor %}
     </div>
 
