--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -3,21 +3,27 @@
 {% block title %}Product{% endblock %}
 
 {% block body %}
-    <div class="row">
+    <div class="bg-light p-3">
+        <h1 class="text-center">{{ product.name }}</h1>
+    </div>
+    <div class="row mt-5">
         <div class="col-4">
             <img src="{{ product.media }}" alt="{{ product.mediaAlt }}" style="width: 100%;">
         </div>
         <div class="col text-center">
-            <h1>{{ product.name }}</h1>
             <p>{{product.description}}</p>
-            <p>Prix : {{ product.price }}0 €</p>
-            <a href="{{path( 'cart_add', {'id': product.id} )}}" class="btn btn-success align-center">
+            <p style="font-weight: bold;" class="mt-4">Prix : {{ product.price }}0 €</p>
+            <a href="{{path( 'cart_add', {'id': product.id} )}}" class="btn btn-success align-center mt-3">
                 <i class="fas fa-shopping-cart mr-1"></i>
                 Ajouter
             </a>
         </div>
-        
-        
     </div>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('product_new') }}" class="btn btn-success"><i class="fas fa-plus-circle mr-1"></i> Créer un produit</a>
+        <a href="{{ path('product_edit', {id:product.id}) }}" class="btn btn-warning"><i class="fas fa-edit mr-1"></i>Modifier le produit</a>
+    {% endif %}
+
+    {% include 'footer.html.twig' %}
 
 {% endblock %}
