--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Category index{% endblock %}
+{% block title %}Catégories{% endblock %}
 
 {% block body %}
     <div class="bg-light p-3">
