--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Category{% endblock %}
+{% block title %}{{ category.name }}{% endblock %}
 
 {% block body %}
     <div class="bg-light p-3">
