--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Se connecter{% endblock %}
 
 {% block body %}
 <form method="post">
@@ -9,17 +9,20 @@
     {% endif %}
 
     {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+        <div class="mb-4 text-center">
+            Vous êtes connecté en tant que {{ app.user.username }} <a href="{{ path('app_logout') }}" class="btn btn-warning">Se déconnecter</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
-    <label for="inputEmail" class="sr-only">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-
+    <h1 class="h3 mb-3 font-weight-normal text-center">Se connecter</h1>
+    <div class="row justify-content-center mt-5">
+        <label for="inputEmail" class="sr-only">Email</label>
+        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control col-6" placeholder="Email" required autofocus>
+    </div>
+    <div class="row justify-content-center mt-2">
+        <label for="inputPassword" class="sr-only">Mot de passe</label>
+        <input type="password" name="password" id="inputPassword" class="form-control mt-3 col-6" placeholder="Mot de passe" required>
+    </div>
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
@@ -34,10 +37,11 @@
             </label>
         </div>
     #}
-
-    <button class="btn btn-primary" type="submit">
-        Se connecter
-    </button>
+    <div class="row justify-content-center mt-4">
+        <button class="btn btn-primary mt-3 align-center" type="submit">
+            Se connecter
+        </button>
+    </div>
 </form>
 
 {% include 'footer.html.twig' %}
