--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouvelle catégorie{% endblock %}
 
 {% block body %}
-    <h1>Créer une categorie</h1>
+    <h1 class="text-center">Créer une categorie</h1>
 
     {{ include('category/_form.html.twig') }}
 
