--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <h1>Modifier {{category.name}}</h1>
+    <h1 class="text-center">Modifier {{category.name}}</h1>
 
     {{ include('category/_form.html.twig', {'button_label': 'Modifier'}) }}
 
