--- a/templates/product/_form.html.twig
+++ b/templates/product/_form.html.twig
@@ -1,7 +1,45 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    {# {{ form_start(form)}} #}
-        {{ form_row(form.media, {'attr' : {'placeholder':'http://placehold.it/'}}) }}
-    {# {{ form_end(form) }} #}
-    <button class="btn btn-success">{{ button_label|default('Save') }}</button>
+
+    <div class="row justify-content-center">
+        {{ form_widget(form.name, {
+            'attr': {'placeholder': "Nom", 'class' : 'form-control col-6 mt-3'}
+        }) }}
+    </div>
+    <div class="row justify-content-center">
+        {{ form_widget(form.description, {
+            'attr': {'placeholder': "Description", 'class' : 'form-control col-6 mt-3'}
+        }) }}
+    </div>
+    <div class="row justify-content-center">
+        {{ form_widget(form.media, {
+            'attr': {'placeholder': "URL de l'image", 'class' : 'form-control col-6 mt-3'}
+        }) }}
+    </div>
+    <div class="row justify-content-center">
+        {{ form_widget(form.mediaAlt, {
+            'attr': {'placeholder': "Alt de l'image", 'class' : 'form-control col-6 mt-3'}
+        }) }}
+    </div>
+    <div class="row justify-content-center">
+        {{ form_widget(form.price, {
+            'attr': {'placeholder': "Prix", 'class' : 'form-control col-6 mt-3','type':'number'}
+        }) }}
+    </div>
+    <div class="row justify-content-center">
+        {{ form_widget(form.category, {
+            'attr': {'placeholder': "Catégorie", 'class' : 'form-control col-6 mt-3'}
+        }) }}
+    </div>
+    <div class="row justify-content-center">
+        {{ form_widget(form.available, {
+            'attr': {'placeholder': "Disponible", 'class' : 'mt-3'}
+        }) }}
+        {{ form_label(form.available, "Disponible") }} 
+    </div>
+
+
+    <div class="row justify-content-center">
+        <button class="btn btn-success">{{ button_label|default('Enregistrer') }}</button>
+    </div>
+
 {{ form_end(form) }}
