--- a/templates/product/edit.html.twig
+++ b/templates/product/edit.html.twig
@@ -1,13 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Product{% endblock %}
+{% block title %}Modifier {{product.name}} {% endblock %}
 
 {% block body %}
-    <h1>Edit Product</h1>
+    <h1 class="text-center">Modifier {{product.name}}</h1>
 
-    {{ include('product/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('product_index') }}">back to list</a>
+    {{ include('product/_form.html.twig', {'button_label': 'Modifier'}) }}
     
     {% include 'footer.html.twig' %}
     
