--- a/templates/product/new.html.twig
+++ b/templates/product/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouveau produit{% endblock %}
 
 {% block body %}
-    <h1>Créer un produit</h1>
+    <h1 class="text-center">Créer un produit</h1>
 
     {{ include('product/_form.html.twig') }}
 
