--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -18,13 +18,13 @@
             {% if product.available or is_granted('ROLE_ADMIN') %}
                 <div class="col-4 mt-4 text-center">
                     <a href="{{ path('product_show', {id:product.id}) }}" class="unstyled-link">
-                        <div class="border border-dark rounded p-2 clearfix">
+                        <div class="border border-dark p-2 clearfix">
                             <h2>
                                 {{ product.name }}
                             </h2>
                             <hr>
                             <p>
-                                {{ product.price }}0 €    
+                                {{ product.price }} €    
                             </p>
                             <hr>
                                 <img class="img-fluid rounded" src="{{ product.media }}" alt="{{ product.mediaAlt }}">  
