--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -12,7 +12,7 @@
         </div>
         <div class="col text-center">
             <p>{{product.description}}</p>
-            <p style="font-weight: bold;" class="mt-4">Prix : {{ product.price }}0 €</p>
+            <p style="font-weight: bold;" class="mt-4">Prix : {{ product.price }} €</p>
             <a href="{{path( 'cart_add', {'id': product.id} )}}" class="btn btn-success align-center mt-3">
                 <i class="fas fa-shopping-cart mr-1"></i>
                 Ajouter
