--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -64,7 +64,7 @@
         </form>
 
     {% else %}
-        <p>Votre panier est vide.</p>
+        <p class="text-center mt-5">Votre panier est vide.</p>
     {% endif %}
 
     
