--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="bg-light p-3">
-        <h1>Vos commandes</h1>
+        <h1 class="text-center">Vos commandes</h1>
     </div>
 
     <div class="row">
