--- a/templates/orders/show.html.twig
+++ b/templates/orders/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello OrdersController!{% endblock %}
+{% block title %}Mes commandes{% endblock %}
 
 {% block body %}
     <div class="bg-light p-3">
